--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,15 @@
-<div><h2 class="page-title">View All Blog Posts</h2></div>
+{{#each posts}}
+  <div class="card">
+    <div class="card-heading">
+      <h2>
+        <a href="/post/{{id}}">{{title}}</a>
+      </h2>
+      <div>
+        Posted by {{User.username}} on {{format_date createdAt}}
+      </div>
+    </div>
+    <div class="card-body">
+      {{body}}
+    </div>
+  </div>
+  {{/each}}
