--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
   </head>
   <body>
       <header>
-        <h1 class="title">Tech News</h1>
+        <h1 class="title">Tech Blog</h1>
         <nav>
           <ul>
             {{#if loggedIn}}
