fixed dashboard so you can see logged in user's posts, fixed userid and date on posts on homepage, set up route for /post/:id so when you click on a single post it brings you to that post

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
           <ul>
             {{#if loggedIn}}
               <li><a href="/">Home</a></li>
-              <a href="/dashboard">dashboard</a>
+              <li><a href="/dashboard">dashboard</a></li>
               <button id="logout" class="btn-no-style">logout</button>
             {{else}}
             <a href="/">homepage</a>
