--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,4 +13,25 @@
     <div>
     <button class="btn btn-info" type="submit">login</button>
 </section>
+
+<section>
+    <div class="signup-form">
+  <h2>Sign Up</h2>
+  <form>
+     <div>
+      <label for="username-signup">Username:</label>
+        <input class="form-input" type="text" id="username-signup" />
+    </div>
+    <div>
+      <label for="email-signup">Email:</label>
+        <input class="form-input" type="text" id="email-signup" />
+    </div>
+    <div>
+      <label for="password-signup">Password:</label>
+        <input class="form-input" type="password" id="password-signup" />
+    </div>
+    <div>
+    <button class="btn btn-info" type="submit">sign up</button>
+</section>
 <script src="/javascript/login.js"></script>
+
