added post info handlebars partial to render on the dashboard

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -21,9 +21,8 @@
     <ol>
         {{#each posts as |post|}}
         <li>
-            {{!-- {{> post-info post}} --}}
-            {{!-- <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a> --}}
-        {{!-- </li> --}}
+            {{> post-info post}}
+        </li>
         {{/each}}
     </ol>
 </section>
