started to set up comment route

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,5 +28,8 @@
     <main>
       {{{body}}}
     </main>
+    {{#if loggedIn}}
+    <scrip src="/javascript/logout.js"></scrip>
+    {{/if}}
   </body>
 </html>
