--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,4 +1,8 @@
 <div class="card">
+    <div>
+    <a href="/post/{{id}}">{{comments.length}}
+      {{format_plural "comment" comments.length}}</a>
+    </div>
   <div class="card-heading">
     <h3><a class="edit-link" href="/dashboard/edit/{{id}}">{{title}}</a></h3>
   </div>
