--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -22,6 +22,8 @@
         {{#each posts as |post|}}
         <li>
             {{> post-info post}}
+            <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
+
         </li>
         {{/each}}
     </ol>
