--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,12 +1,12 @@
-<div class="comments">
+{{!-- <div class="comments">
   {{#each this}}
   <section class="comment">
     <div class="meta">
       {{User.username}} on {{format_date createdAt}}
     </div>
     <div class="text">
-      {{body}}
+      {{Comment.body}}
     </div>
   </section>
   {{/each}}
-</div>
+</div> --}}
