--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,25 +9,40 @@
     </div>
     <div>
       <label for="post-body">Body</label>
-      <input type="text" id="post-body"name="post-body" />
+      <input type="text" id="post-body" name="post-body" />
     </div>
     <button type="submit" class="btn">Create</button>
   </form>
 </section>
 
 {{#if posts.length}}
-<section>
+  <section>
     <h2>Your Posts</h2>
     <ol>
-        {{#each posts as |post|}}
+      {{#each posts as |post|}}
         <li>
-            {{> post-info post}}
-            <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
-
+          {{!-- {{> post-info post}} --}}
+          <div class="card">
+            <div class="card-heading">
+              <h2>
+                <a href="/post/{{id}}">{{title}}</a>
+              </h2>
+              <div>
+                Posted by
+                {{User.username}}
+                on
+                {{format_date createdAt}}
+              </div>
+            </div>
+            <div class="card-body">
+              {{body}}
+            </div>
+          </div>
+          <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
         </li>
-        {{/each}}
+      {{/each}}
     </ol>
-</section>
-{{/if}} 
+  </section>
+{{/if}}
 
 <script src="/javascript/add-post.js"></script>
