--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -14,13 +14,37 @@
   </div>
   {{/each}} --}}
 
-<ol class="post-list">
+{{!-- <ol class="post-list">
   {{#each posts as |post|}}
     <li>
       <div class="card">
         <div class="card-heading">
           <h2>
             <a href="/post/{{id}}">{{post.title}}</a>
+          </h2>
+          <div>
+            Posted by
+            {{User.username}}
+            on
+            {{format_date createdAt}}
+          </div>
+        </div>
+        <div class="card-body">
+          {{body}}
+        </div>
+      </div>
+    </li>
+  {{/each}}
+</ol> --}}
+
+<ol class="post-list">
+  {{#each posts as |post|}}
+    <li>
+      {{!-- {{> post-info post}} --}}
+      <div class="card">
+        <div class="card-heading">
+          <h2>
+            <a href="/post/{{id}}">{{title}}</a>
           </h2>
           <div>
             Posted by
