--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,4 +1,4 @@
-<div class="card">
+{{!-- <div class="card">
   <div class="card-heading">
     <h2>
       <a href="/post/{{id}}">{{title}}</a>
@@ -13,4 +13,4 @@
   <div class="card-body">
     {{body}}
   </div>
-</div>
+</div> --}}
