--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -1,4 +1,5 @@
 {{!-- {{> post-info post}} --}}
+
 <div class="card">
   <div class="card-heading">
     <h2>
@@ -16,29 +17,32 @@
   </div>
 </div>
 
-{{!-- {{#if loggedIn}} --}}
+{{#if loggedIn}}
 <form class="comment-form">
-  <div>
-    <textarea name="comment-body"></textarea>
-  </div>
-
-  <div>
-    <button type="submit">add comment</button>
-  </div>
-</form>
-{{!-- {{/if}} --}}
-
-{{!-- {{> comments post.comments}} --}}
-
-<div class="comment-list">
-  {{#each comments as |comment|}}
-    <div class="text">
-      {{Comment.body}}
+    <div>
+        <textarea name="comment-body"></textarea>
     </div>
+
+    <div>
+        <button type="submit" class="button">Add Comment</button>
+    </div>
+</form>
+{{/if}}
+
+{{> comments Comments}}
+{{!-- <div class="comments">
+  {{#each Comments}}
+  <section class="comment">
+    <div class="meta">
+      {{User.username}} on {{format_date createdAt}}
+    </div>
+    <div class="text">
+      {{body}}
+    </div>
+  </section>
   {{/each}}
+</div> --}}
 
-</div>
-
-{{!-- {{#if loggedIn}} --}}
+{{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
-{{!-- {{/if}} --}}
+{{/if}}
