updated routes to correct locations, working on updating post

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,6 +21,7 @@
           {{else}}
             <a href="/">homepage</a>
             <a href="/login">login</a>
+            <a href="/signup">signup</a>
           {{/if}}
         </ul>
       </nav>
