--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,20 +1,4 @@
 <section>
-    <div class="login-form">
-  <h2>Login</h2>
-  <form>
-    <div>
-      <label for="email-login">Email:</label>
-        <input class="form-input" type="text" id="email-login" />
-    </div>
-    <div>
-      <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
-    </div>
-    <div>
-    <button class="btn btn-info" type="submit">login</button>
-</section>
-
-{{!-- <section>
     <div>
   <h2>Sign Up</h2>
   <form class="signup-form">
@@ -32,6 +16,5 @@
     </div>
     <div>
     <button class="btn btn-info" type="submit">sign up</button>
-</section> --}}
-<script src="/javascript/login.js"></script>
-
+</section>
+<script src="/javascript/signup.js"></script>
