--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -25,7 +25,7 @@
           <div class="card">
             <div class="card-heading">
               <h2>
-                <a href="/post/{{id}}">{{title}}</a>
+                <a href="/dashboard/edit/{{id}}">{{title}}</a>
               </h2>
               <div>
                 Posted by
@@ -38,7 +38,7 @@
               {{body}}
             </div>
           </div>
-          <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
+          {{!-- <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a> --}}
         </li>
       {{/each}}
     </ol>
