--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -41,9 +41,9 @@
   {{#each posts as |post|}}
     <li>
       {{!-- {{> post-info post}} --}}
-      <div class="card">
+      <div class="card bg-info">
         <div class="card-heading">
-          <h2>
+          <h2> 
             <a href="/post/{{id}}">{{title}}</a>
           </h2>
           <div>
