--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -3,7 +3,7 @@
 <div class="card">
   <div class="card-heading">
     <h2>
-      <a href="/post/{{id}}">{{title}}</a>
+      <a>{{id}}{{title}}</a>
     </h2>
     <div>
       Posted by
